--- a/build.xml
+++ b/build.xml
@@ -3,16 +3,20 @@
               Any modifications will be overwritten.
               To include a user specific buildfile here, simply create one in the same
               directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. --><project basedir="." default="build" name="Calculator-master">
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="Caculator"
+              	xmlns:jacoco="antlib:org.jacoco.ant">
     <property environment="env"/>
+    <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.8"/>
     <property name="source" value="1.8"/>
     <path id="JUnit 4.libraryclasspath">
-        <pathelement location="../../.p2/pool/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
-        <pathelement location="../../.p2/pool/plugins/org.hamcrest.core_1.3.0.v201303031735.jar"/>
+        <pathelement location="C:/Users/byeonggon/.p2/pool/plugins/org.junit_4.12.0.v201504281640/junit.jar"/>
+        <pathelement location="C:/Users/byeonggon/.p2/pool/plugins/org.hamcrest.core_1.3.0.v20180420-1519.jar"/>
+    	<fileset dir="${ant.home}/lib" includes="*.jar"/>
+    	<fileset dir="${ant.home}/lib/junit" includes="*.jar"/>
     </path>
-    <path id="Calculator-master.classpath">
+    <path id="Caculator.classpath">
         <pathelement location="bin"/>
         <path refid="JUnit 4.libraryclasspath"/>
     </path>
@@ -20,6 +24,7 @@
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
+                <exclude name="**/*.launch"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -34,8 +39,44 @@
         <echo message="${ant.project.name}: ${ant.file}"/>
         <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
-            <classpath refid="Calculator-master.classpath"/>
+            <classpath refid="Caculator.classpath"/>
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+    <target name="CalculatorTest">
+        <mkdir dir="${junit.output.dir}"/>
+    	<taskdef uri="antlib:org.jacoco.ant" resource="org/jacoco/ant/antlib.xml">
+    			<classpath path="../jacocoant.jar"/>
+    	</taskdef>
+    	<jacoco:coverage>
+	        <junit fork="yes" printsummary="withOutAndErr">
+	            <formatter type="xml"/>
+	            <test name="CalculatorTest" todir="${junit.output.dir}"/>
+	            <jvmarg line="-ea"/>
+	            <classpath refid="Caculator.classpath"/>
+	        </junit>
+		</jacoco:coverage>
+    	<jacoco:report>
+    		<executiondata>
+    			<file file="jacoco.exec"/>
+    		</executiondata>
+    		<structure name="java coverage">
+    			<classfiles>
+    				<fileset dir="bin"/>
+    			</classfiles>
+    			<sourcefiles encoding="UTF-8">
+    				<fileset dir="src"/>
+    			</sourcefiles>
+    			</structure>
+    		<html destdir="${junit.output.dir}/coverage-report"/>
+    	</jacoco:report>
+    </target>
+    <target name="junitreport">
+        <junitreport todir="${junit.output.dir}">
+            <fileset dir="${junit.output.dir}">
+                <include name="TEST-*.xml"/>
+            </fileset>
+            <report format="frames" todir="${junit.output.dir}"/>
+        </junitreport>
+    </target>
 </project>
